# chit_fund_analyzer

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  GOOGLE_SHEETS_README.md  GOOGLE_SHEETS_SETUP.md  Makefile  OAUTH_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  STREAMLIT_README.md  USAGE_GUIDE.md  app_auto_oauth.py  app_enhanced.py  app_enhanced_clean.py  app_with_sheets.py  chit_fund_analyzer_demo.ipynb  chit_fund_calculator.py  chit_intrest_cal.ipynb  debug_launch_template  deploy.sh  docker.ps1  enhanced_analysis_functions.py  examples.py  google_sheets_service.py  google_sheets_service_auto.py  intrest_cal.ipynb  main.py  oauth_credentials.json.example  pyproject.toml  requirements.txt  run_app.bat  run_app.py  run_sheets_app.py  streamlit_app.py  test_chit_fund_calculator.py  test_module.py  test_sheets_integration.py  (+2 more)
.github/instructions/: copilot_instructions.md
.github/workflows/: deploy.yml  docker-build.yml
.streamlit/: config.toml
chit_fund_analyzer/: __init__.py  analyzer.py  comparative.py  exceptions.py  models.py  scenario.py  utils.py
docker/: README.md  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf
docs/: DOCKER.md  DOCKER_COMPLETE.md  DOCKER_CONFIG.md  DOCKER_QUICKSTART.md  FILE_ORGANIZATION.md  INSTALL.md  PODMAN.md  PODMAN_SETUP.md  streamlit_app_plan.md
documentation/: DEPLOYMENT_COMPLETE.md  E2E_TEST_REPORT.md  MANUAL_UI_TESTING_REPORT.md  README.md  TESTING_GUIDE.md
notebooks/: borrower_rate_demo.ipynb  chit_fund_analyzer_demo.ipynb  chit_fund_method2.ipynb  chit_intrest_cal.ipynb  prompt.md
scripts/: COMMANDS.ps1  README.md  run_app.py  show_test_results.ps1
streamlit_app/: README.md  __init__.py  auth.py  db.py  main.py  utils.py
streamlit_app/.streamlit/: secrets.toml
streamlit_app/data_manager/: auth.py  base.py  gsheets.py  local.py  migration.py
streamlit_app/stages/: __init__.py  analytics.py  analytics_old.py  dashboard.py  installments.py  login.py
tests/: test_comparative.py  test_data_manager.py
tests/e2e/: conftest.py  test_app.py  test_user_flow.py
